--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pricing - Bonsai Freelance Solutions</title>
 
-    <!-- <link href="/dist/css/styles.css" rel="stylesheet"> -->
     <link href="/dist/css/styles.css" rel="stylesheet" />
+    <!-- <link href="/dist/css/dev.css" rel="stylesheet" /> -->
 
     <!-- Alpine Plugins -->
     <script
