--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="js/scripts.js" defer></script>
+    <script src="/src/js/scripts.js" defer></script>
   </head>
 
   <body x-data="data">
