--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pricing - Bonsai Freelance Solutions</title>
 
-    <link href="/dist/css/styles.css" rel="stylesheet" />
+    <link href="dist/css/styles.css" rel="stylesheet" />
     <!-- <link href="/dist/css/dev.css" rel="stylesheet" /> -->
 
     <!-- Alpine Plugins -->
@@ -22,7 +22,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="/src/js/scripts.js" defer></script>
+    <script src="src/js/scripts.js" defer></script>
   </head>
 
   <body x-data="data">
