fix: change route to relative

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <header>
       <div class="grid grid-cols-3 items-center gap-4 px-24 pt-6">
         <a class="w-fit" href="#"
-          ><img class="h-8" src="/assets/img/bonsai-logo.svg"
+          ><img class="h-8" src="assets/img/bonsai-logo.svg"
         /></a>
 
         <nav class="flex items-center justify-center text-lg">
